test/negative/internal_hxrt_helper_interpolation/Main.hx
class Main {
	static function main():Void {
		trace('helper: ${hxrt.sys.NativeSys}');
	}
}
